	         accept email. )

2000-01-14  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/msgerror.c, include/ta.h, transports/libta/diagnostic.c,
	  transports/smtp/smtp.c:
	    Extend the notary report with "X-ZTAID:" which is diagnostic
	    about which TA process did generate the error report.
	    Allows one to hunt things from the syslog..

	* smtpserver/smtpserver.c:
	    Doing  longjmp()  from whichin a signal handler isn't
	    kosher -> sigsetjmp()/siglongjmp() and friends..

	* scheduler/readconfig.c:
	    Pulled back (disabled) code related to selector clause
	    wild-card testing in clause's "channel" part.

	* proto/cf/standard.cf:
	    Fixed recent thoughts mentioned below - coded test end
	    statement ("fi") was missing.

2000-01-07  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* scheduler/threads.c:
	    Sometimes adding new tasks into a long-running thread did cause
	    the "unfed" count to go to *negative* value.  Now counting tasks
	    there always when they arrive to the thread, not only when all
	    previous ones have already been fed.. (caring about it only when
	    a process is active on the thread.)

	* proto/cf/aliases.cf, proto/cf/fqdnalias.cf, proto/cf/i-iprouter.cf,
	  proto/cf/i-router.cf, proto/cf/standard.cf, proto/db/dbases.conf:
	    Some collected thoughts about how to do multiple instances of
	    several popular databases (like aliases) in varying DB formats.

	* router/libdb/bind.c, proto/cf/i-smtp.cf:
	    Created sub-mode 'mxlocal' for the BIND database.
	    If local system is lowest MX for given domain, then
	    it yields string (query domain) and zero return code,
	    else NIL and non-zero return code.

	* Makefile.in, bin/usa-itar-stripper.sh:
	    'make dist-usa' creates now
	       - DIRNAME-usa.tar  package (vs. DIRNAME.tar of 'make dist')
	       - crypto-DIRNAME.diff  file

	* transports/smtp/smtp.h, transports/smtp/smtp.c:
	    Seen strange junk commands fed out to the remote